// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builder Cajun Fries when preparing meal should return preparable 1`] = `
Serveable {
  "prepareFee": 1,
}
`;

exports[`Builder Everything Burger when preparing meal should return preparable 1`] = `
Cookable {
  "prepareFee": 3,
}
`;

exports[`Builder Meal Builder should add food to order 1`] = `
Meal {
  "food": Array [
    DoubleBurger {
      "cost": 6,
      "name": "Double Burger",
    },
    CurlyFries {
      "cost": 3,
      "name": "Curly Fries",
    },
    CajunFries {
      "cost": 3,
      "name": "Cajun Fries",
    },
  ],
}
`;

exports[`Builder Meal Builder should create a double wonder meal 1`] = `
Meal {
  "food": Array [
    DoubleBurger {
      "cost": 6,
      "name": "Double Burger",
    },
    CurlyFries {
      "cost": 3,
      "name": "Curly Fries",
    },
  ],
}
`;

exports[`Builder Meal Builder should create spicy meal 1`] = `
Meal {
  "food": Array [
    EverythingBurger {
      "cost": 5,
      "name": "Everything Burger",
    },
    CajunFries {
      "cost": 3,
      "name": "Cajun Fries",
    },
  ],
}
`;
